--- a/prediction_api/Dockerfile
+++ b/prediction_api/Dockerfile
@@ -8,6 +8,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 EXPOSE 8000
 
-CMD ["uvicorn", "prediction_api:app", "--host", "0.0.0.0", "--port", 
-"8000"]
-
+CMD ["uvicorn", "prediction_api:app", "--host", "0.0.0.0", "--port", "8000"]
