--- a/prediction_api/Dockerfile
+++ b/prediction_api/Dockerfile
@@ -2,7 +2,10 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY . .
+# Copy only necessary files to avoid container bloat
+COPY prediction_api.py .
+COPY models ./models
+COPY requirements.txt .
 
 RUN pip install --no-cache-dir -r requirements.txt
 
